--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Truck/TruckAddEdit.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Truck/TruckAddEdit.cshtml
@@ -12,53 +12,121 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-<h1>@ViewBag.Data</h1>
-<div class="container">
-    <form method="post" asp-area="MainPages" asp-controller="Truck" asp-action="Save">
-        <input type="hidden" asp-for="TruckID" />
-        <table class="table" align="center">
-            <tr>
-                <td>TruckName</td>
-                <td>:</td>
-                <td><input asp-for="TruckName" type="text" placeholder="Truck Name" /><br /><span class="text-danger" asp-validation-for="TruckName"></span></td>
-            </tr>
-            <tr>
-                <td>TruckType</td>
-                <td>:</td>
-                <td><input asp-for="TruckType" type="text" placeholder="Truck Type" /><br /><span class="text-danger" asp-validation-for="TruckType"></span></td>
-            </tr>
-            <tr>
-                <td>TruckNumber</td>
-                <td>:</td>
-                <td><input asp-for="TruckNumber" type="text" placeholder="Truck Number" /><br /><span class="text-danger" asp-validation-for="TruckNumber"></span></td>
-            </tr>
-            <tr>
-                <td>EngineNo</td>
-                <td>:</td>
-                <td><input asp-for="EngineNo" type="text" placeholder="Engine No" /><br /><span class="text-danger" asp-validation-for="EngineNo"></span></td>
-            </tr>
-            <tr>
-                <td>ChasisNo</td>
-                <td>:</td>
-                <td><input asp-for="ChasisNo" type="text" placeholder="Chasis No" /><br /><span class="text-danger" asp-validation-for="ChasisNo"></span></td>
-            </tr>
-            <tr>
-                <td>Capacity</td>
-                <td>:</td>
-                <td><input asp-for="Capacity" type="number" placeholder="Capacity" /><br /><span class="text-danger" asp-validation-for="Capacity"></span></td>
-            </tr>
-            <tr>
-                <td>Price</td>
-                <td>:</td>
-                <td><input asp-for="Price" type="number" placeholder="Price" /><br /><span class="text-danger" asp-validation-for="Price"></span></td>
-            </tr>
-        </table>
-        <div class="d-flex justify-content-evenly">
-            <input class="btn btn-outline-success " type="submit" />
-            <a class="btn btn-outline-danger" asp-area="MainPages" asp-controller="Truck" asp-action="Truck">
-                Cancel
-            </a>
-        </div>
 
-    </form>
-</div>
+<section class="section " id="contactus">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="section-title">
+                    <h2>@ViewBag.Data</h2>
+                    <p>
+                        I design and develop services for customers of all sizes, specializing in creating stylish, modern
+                        websites
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-row-reverse">
+            <div class="col-md-7 col-lg-8 m-15px-tb">
+                <div class="contact-form">
+                    <form method="post" asp-area="MainPages" asp-controller="Truck" asp-action="Save" class="contactform contact_form" id="contact_form">
+                        <input type="hidden" asp-for="TruckID" />
+
+                        <div class="returnmessage valid-feedback p-15px-b"
+                             data-success="Your message has been received, We will contact you soon."></div>
+                        <div class="empty_notice invalid-feedback p-15px-b"><span>Please Fill Required Fields</span></div>
+                        
+                            <div class="row">
+                                <div class="col-lg-4 pt-2">Truck Name</div>
+                                <div class="col-lg-8 ">
+                                        <input class="form-control" asp-for="TruckName" type="text" placeholder="Truck Name" /><br /><span class="text-danger" asp-validation-for="TruckName"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                            <div class="col-lg-4 pt-2">Truck Type</div>
+                                <div class="col-lg-8">
+
+                                <input class="form-control" asp-for="TruckType" type="text" placeholder="Truck Type" /><br /><span class="text-danger" asp-validation-for="TruckType"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                            <div class="col-lg-4 pt-2">Truck Number</div>
+                                    <div class="col-lg-8">
+                                <input class="form-control" asp-for="TruckNumber" type="text" placeholder="Truck Number" /><br /><span class="text-danger" asp-validation-for="TruckNumber"></span>
+                                    </div>
+                                </div>
+                            <div class="row">
+                                <div class="col-lg-4 pt-2">Engine No</div>
+                                <div class="col-lg-8">
+
+                                <input class="form-control" asp-for="EngineNo" type="text" placeholder="Engine No" /><br /><span class="text-danger" asp-validation-for="EngineNo"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 pt-2">Chasis No</div>
+                                <div class="col-lg-8">
+
+                                <input class="form-control" asp-for="ChasisNo" type="text" placeholder="Chasis No" /><br /><span class="text-danger" asp-validation-for="ChasisNo"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 pt-2">Capacity</div>
+                                <div class="col-lg-8">
+
+                                <input class="form-control" asp-for="Capacity" type="number" placeholder="Capacity" /><br /><span class="text-danger" asp-validation-for="Capacity"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 pt-2">Price</div>
+                                <div class="col-lg-8">
+                                <input class="form-control" asp-for="Price" type="number" placeholder="Price" /><br /><span class="text-danger" asp-validation-for="Price"></span>
+                                </div>
+                            </div>
+                        
+                            <div class="row">
+                           
+                            <div class="col-6 d-flex justify-content-center ">
+                                <div class="send ">
+                                    <button type="submit" id="send_message" class="px-btn theme" ><span>Submit</span> <i class="arrow"></i></button>
+                                </div>
+                            </div>
+                            <div class="col-6 d-flex justify-content-center">
+                                <div class="send">
+                                    <a asp-area="MainPages" asp-controller="Truck" asp-action="Truck" id="send_message" class="px-btn theme"><span>Cancle</span> <i class="arrow"></i></a>
+                                </div>
+                            </div>
+                            </div>
+                        
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-5 col-lg-4 m-15px-tb">
+                <div class="contact-name">
+                    <h5>Mail</h5>
+                    <p>
+                        kkk@Transport.com
+                    </p>
+                </div>
+                <div class="contact-name">
+                    <h5>Visit My Studio</h5>
+                    <p>Warnwe Park Streetperrine, <br>FL 33157 New York City</p>
+                </div>
+                <div class="contact-name">
+                    <h5>Phone</h5>
+                    <p>+01 123 654 8096</p>
+                </div>
+                <div class="social-share nav">
+                    <a class="dribbble" href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                    <a class="behance" href="#">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                    <a class="linkedin" href="#">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
