--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
@@ -56,7 +56,7 @@
                 <a asp-area="MainPages" asp-controller="Driver" asp-action="Driver" class="nav-item nav-link  @(ViewBag.Title=="Driver"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Driver</a>
                 <a asp-area="MainPages" asp-controller="GoodsType" asp-action="GoodsType" class="nav-item nav-link  @(ViewBag.Title=="GoodsType"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">GoodsType</a>
                 <a asp-area="MainPages" asp-controller="City" asp-action="City" class="nav-item nav-link  @(ViewBag.Title=="City"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">City</a>*@
-                <div class="dropdown nav-item nav-link @(ViewBag.Title=="Truck"||ViewBag.Title=="Driver"||ViewBag.Title=="GoodsType"||ViewBag.Title=="City"?"active":"")">
+                <div class="dropdown nav-item nav-link @(ViewBag.IsAdmin == "False" ? "d-none" : "") @(ViewBag.Title=="Truck"||ViewBag.Title=="Driver"||ViewBag.Title=="GoodsType"||ViewBag.Title=="City"?"active":"")">
                     <div  id="dLabel" type="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Other
                       </div>
