--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
@@ -50,8 +50,8 @@
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="About" class="nav-item nav-link  @(ViewBag.Title=="About"?"active":"")" >About</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Services" class="nav-item nav-link  @(ViewBag.Title=="Services"?"active":"")">Services</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Contact" class="nav-item nav-link  @(ViewBag.Title=="Contact"?"active":"")">Contact</a>
-                <a asp-area="MainPages" asp-controller="Pages" asp-action="Order" class="nav-item nav-link  @(ViewBag.Title=="Order"?"active":"")">Order</a>
-                <a asp-area="MainPages" asp-controller="Pages" asp-action="Booking" class="nav-item nav-link  @(ViewBag.Title=="Booking"?"active":"")@(ViewBag.IsAdmin == "True" ? "d-none" : "")">Booking</a>
+                <a asp-area="MainPages" asp-controller="Booking" asp-action="Order" class="nav-item nav-link  @(ViewBag.Title=="Order"?"active":"")">Order</a>
+                <a asp-area="MainPages" asp-controller="Booking" asp-action="Booking" class="nav-item nav-link  @(ViewBag.Title=="Booking"?"active":"")@(ViewBag.IsAdmin == "True" ? "d-none" : "")">Booking</a>
                 @*<a asp-area="MainPages" asp-controller="Truck" asp-action="Truck" class="nav-item nav-link  @(ViewBag.Title=="Truck"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Truck</a>
                 <a asp-area="MainPages" asp-controller="Driver" asp-action="Driver" class="nav-item nav-link  @(ViewBag.Title=="Driver"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Driver</a>
                 <a asp-area="MainPages" asp-controller="GoodsType" asp-action="GoodsType" class="nav-item nav-link  @(ViewBag.Title=="GoodsType"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">GoodsType</a>
