--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Booking/Booking.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Booking/Booking.cshtml
@@ -15,134 +15,191 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-<h1>Booking</h1>
+
+    
+<section class="section " id="contactus">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="section-title">
+                    <h2>@ViewBag.Data</h2>
+                    <p>
+                        I design and develop services for customers of all sizes, specializing in creating stylish, modern
+                        websites
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-row-reverse">
+            <div class="col-md-7 col-lg-8 m-15px-tb">
+                <div class="contact-form">
+                    <form method="post" asp-area="MainPages" asp-controller="Booking" asp-action="Save" class="contactform contact_form" id="contact_form">
+                        <input type="hidden" asp-for="BookingID" />
+
+                        <div class="returnmessage valid-feedback p-15px-b"
+                             data-success="Your message has been received, We will contact you soon."></div>
+                        <div class="empty_notice invalid-feedback p-15px-b"><span>Please Fill Required Fields</span></div>
+
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Truck</div>
+                            <div class="col-lg-8 ">
+                                <select class=" " asp-for="TruckID">
+                                    <option value="none" selected disabled hidden>Select a Truck</option>
+                                    @foreach (TruckModel ops in Model.Trucks)
+                                    {
+                                        <option value="@ops.TruckID">@ops.TruckName</option>
+                                    }
+                                </select><br />
+                                <span class="text-danger" asp-validation-for="TruckID"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">PickupCity</div>
+                            <div class="col-lg-8">
+                                <select class=" " asp-for="PickUpCityID">
+                                    <option value="none" selected disabled hidden>Select a PickupCity</option>
+                                    @foreach (CityModel ops in Model.Cities)
+                                    {
+                                        <option value="@ops.CityID">@ops.CityName</option>
+                                    }
+                                </select><br />
+                                <span class="text-danger" asp-validation-for="PickUpCityID"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">DropCity</div>
+                            <div class="col-lg-8 ">
+                                <select class=" " asp-for="DropCityID">
+                                    <option value="none" selected disabled hidden>Select a DropCity</option>
+                                    @foreach (CityModel ops in Model.Cities)
+                                    {
+                                        <option value="@ops.CityID">@ops.CityName</option>
+                                    }
+                                </select><br />
+                                <span class="text-danger" asp-validation-for="DropCityID"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">GoodsType</div>
+                            <div class="col-lg-8">
+                                <select class=" " asp-for="GoodsTypeID">
+                                    <option value="none" selected disabled hidden>Select a GoodsType</option>
+                                    @foreach (GoodsTypeModel ops in Model.Goods)
+                                    {
+                                        <option value="@ops.GoodsTypeID">@ops.GoodsTypeName</option>
+                                    }
+                                </select><br />
+                                <span class="text-danger" asp-validation-for="GoodsTypeID"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Driver</div>
+                            <div class="col-lg-8 ">
+                                <select class=" " asp-for="DriverID">
+                                    <option value="none" selected disabled hidden>Select a Driver</option>
+                                    @foreach (DriverModel ops in Model.Drivers)
+                                    {
+                                        <option value="@ops.DriverID">@ops.DriverName</option>
+                                    }
+                                </select><br />
+                                <span class="text-danger" asp-validation-for="DriverID"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Distance</div>
+                            <div class="col-lg-8">
+                                <input asp-for="Distance" type="number" /><br />
+                                <span class="text-danger" asp-validation-for="Distance"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Price</div>
+                            <div class="col-lg-8 ">
+                                <input asp-for="Price" type="number" /><br />
+                                <span class="text-danger" asp-validation-for="Price"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Weight</div>
+                            <div class="col-lg-8">
+                                <input asp-for="Weight" type="number" /><br />
+                                <span class="text-danger" asp-validation-for="Weight"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Pickupdate</div>
+                            <div class="col-lg-8 ">
+                                <input asp-for="PickUpDate" type="datetime-local" /><br />
+                                <span class="text-danger" asp-validation-for="PickUpDate"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">Dropdate</div>
+                            <div class="col-lg-8">
+                                <input asp-for="DropDate" type="datetime-local" /><br />
+                                <span class="text-danger" asp-validation-for="DropDate"></span>
+                            </div>
+                        </div>
+                         <div class="row">
+                            <div class="col-lg-4 pt-2">FromAddress</div>
+                            <div class="col-lg-8">
+                                <input asp-for="FromAddress" type="tel" /><br />
+                                <span class="text-danger" asp-validation-for="FromAddress"></span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-4 pt-2">ToAddress</div>
+                            <div class="col-lg-8">
+                                <input asp-for="ToAddress" type="tel" /><br />
+                                <span class="text-danger" asp-validation-for="ToAddress"></span>
+                            </div>
+                        </div>
 
 
-    <form method="post" asp-area="MainPages" asp-controller="Booking" asp-action="Save">
-        <input type="hidden" asp-for="BookingID" />
-        <table>
-        <tr>
-            <td>Truck</td>
-            <td>
-                <select class=" " asp-for="TruckID">
-                    <option value="none" selected disabled hidden>Select a Truck</option>
-                        @foreach (TruckModel ops in Model.Trucks)
-                        {
-                        <option value="@ops.TruckID">@ops.TruckName</option>
-                        }
-                </select><br />
-                <span class="text-danger" asp-validation-for="TruckID"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>PickupCity</td>
-            <td>
-                <select class=" " asp-for="PickUpCityID">
-                    <option value="none" selected disabled hidden>Select a PickupCity</option>
-                        @foreach (CityModel ops in Model.Cities)
-                        {
-                        <option value="@ops.CityID">@ops.CityName</option>
-                        }
-                </select><br />
-                <span class="text-danger" asp-validation-for="PickUpCityID"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>DropCity</td>
-            <td>
-                <select class=" " asp-for="DropCityID">
-                    <option value="none" selected disabled hidden>Select a DropCity</option>
-                        @foreach (CityModel ops in Model.Cities)
-                        {
-                        <option value="@ops.CityID">@ops.CityName</option>
-                        }
-                </select><br />
-                <span class="text-danger" asp-validation-for="DropCityID"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>GoodsType</td>
-            <td>
-                <select class=" " asp-for="GoodsTypeID">
-                    <option value="none" selected disabled hidden>Select a GoodsType</option>
-                        @foreach (GoodsTypeModel ops in Model.Goods)
-                        {
-                        <option value="@ops.GoodsTypeID">@ops.GoodsTypeName</option>
-                        }
-                </select><br />
-                <span class="text-danger" asp-validation-for="GoodsTypeID"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Driver</td>
-            <td>
-                <select class=" " asp-for="DriverID">
-                    <option value="none" selected disabled hidden>Select a Driver</option>
-                        @foreach (DriverModel ops in Model.Drivers)
-                        {
-                        <option value="@ops.DriverID">@ops.DriverName</option>
-                        }
-                </select><br />
-                <span class="text-danger" asp-validation-for="DriverID"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Distance</td>
-            <td>
-                <input asp-for="Distance" type="number" /><br />
-                <span class="text-danger" asp-validation-for="Distance"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Price</td>
-            <td>
-                <input asp-for="Price" type="number" /><br />
-                <span class="text-danger" asp-validation-for="Price"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Weight</td>
-            <td>
-                <input asp-for="Weight" type="number" /><br />
-                <span class="text-danger" asp-validation-for="Weight"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Pickupdate</td>
-            <td>
-                <input asp-for="PickUpDate" type="datetime-local" /><br />
-                <span class="text-danger" asp-validation-for="PickUpDate"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>Dropdate</td>
-            <td>
-                <input asp-for="DropDate" type="datetime-local" /><br />
-                <span class="text-danger" asp-validation-for="DropDate"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>FromAddress</td>
-            <td>
-                <input asp-for="FromAddress" type="tel" /><br />
-                <span class="text-danger" asp-validation-for="FromAddress"></span>
-            </td>
-        </tr>
-        <tr>
-            <td>ToAddress</td>
-            <td>
-                <input asp-for="ToAddress" type="tel" /><br />
-                <span class="text-danger" asp-validation-for="ToAddress"></span>
-            </td>
-        </tr>
-        <tr>
-            <td><input type="submit" /></td>
-            <td>
-                <a class="btn btn-outline-danger" asp-area="MainPages" asp-controller="Booking" asp-action="Order">
-                    Cancel
-                </a>
-            </td>
-        </tr>
-        </table>
-    </form>
+                        <div class="row">
 
+                            <div class="col-6 d-flex justify-content-center ">
+                                <div class="send ">
+                                    <button type="submit" id="send_message" class="px-btn theme"><span>Submit</span> <i class="arrow"></i></button>
+                                </div>
+                            </div>
+                            <div class="col-6 d-flex justify-content-center">
+                                <div class="send">
+                                    <a asp-area="MainPages" asp-controller="Booking" asp-action="Order" id="send_message" class="px-btn theme"><span>Cancle</span> <i class="arrow"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-5 col-lg-4 m-15px-tb">
+                <div class="contact-name">
+                    <h5>Mail</h5>
+                    <p>
+                        kkk@Transport.com
+                    </p>
+                </div>
+                <div class="contact-name">
+                    <h5>Visit My Studio</h5>
+                    <p>Warnwe Park Streetperrine, <br>FL 33157 New York City</p>
+                </div>
+                <div class="contact-name">
+                    <h5>Phone</h5>
+                    <p>+01 123 654 8096</p>
+                </div>
+                <div class="social-share nav">
+                    <a class="dribbble" href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                    <a class="behance" href="#">
+                        <i class="fab fa-behance"></i>
+                    </a>
+                    <a class="linkedin" href="#">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
