--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Booking/Booking.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Booking/Booking.cshtml
@@ -49,8 +49,8 @@
                                     {
                                         <option value="@ops.TruckID">@ops.TruckName</option>
                                     }
-                                </select><br />
-                                <span class="text-danger" asp-validation-for="TruckID"></span>
+                                </select>
+                                <span class="text-danger" asp-validation-for="TruckID"></span><br />
                             </div>
                         </div>
                         <div class="row">
@@ -62,8 +62,8 @@
                                     {
                                         <option value="@ops.CityID">@ops.CityName</option>
                                     }
-                                </select><br />
-                                <span class="text-danger" asp-validation-for="PickUpCityID"></span>
+                                </select>
+                                <span class="text-danger" asp-validation-for="PickUpCityID"></span><br />
                             </div>
                         </div>
                         <div class="row">
@@ -75,8 +75,8 @@
                                     {
                                         <option value="@ops.CityID">@ops.CityName</option>
                                     }
-                                </select><br />
-                                <span class="text-danger" asp-validation-for="DropCityID"></span>
+                                </select>
+                                <span class="text-danger" asp-validation-for="DropCityID"></span><br />
                             </div>
                         </div>
                         <div class="row">
@@ -88,8 +88,8 @@
                                     {
                                         <option value="@ops.GoodsTypeID">@ops.GoodsTypeName</option>
                                     }
-                                </select><br />
-                                <span class="text-danger" asp-validation-for="GoodsTypeID"></span>
+                                </select>
+                                <span class="text-danger" asp-validation-for="GoodsTypeID"></span><br />
                             </div>
                         </div>
                         <div class="row">
@@ -101,57 +101,57 @@
                                     {
                                         <option value="@ops.DriverID">@ops.DriverName</option>
                                     }
-                                </select><br />
-                                <span class="text-danger" asp-validation-for="DriverID"></span>
+                                </select>
+                                <span class="text-danger" asp-validation-for="DriverID"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Distance</div>
                             <div class="col-lg-8">
-                                <input class="form-control" placeholder="Distance" asp-for="Distance" type="number" /><br />
-                                <span class="text-danger" asp-validation-for="Distance"></span>
+                                <input class="form-control" placeholder="Distance" asp-for="Distance" type="number" />
+                                <span class="text-danger" asp-validation-for="Distance"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Price</div>
                             <div class="col-lg-8 ">
-                                <input class="form-control" placeholder="Price" asp-for="Price" type="number" /><br />
-                                <span class="text-danger" asp-validation-for="Price"></span>
+                                <input class="form-control" placeholder="Price" asp-for="Price" type="number" />
+                                <span class="text-danger" asp-validation-for="Price"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Weight</div>
                             <div class="col-lg-8">
-                                <input class="form-control" placeholder="Weight" asp-for="Weight" type="number" /><br />
-                                <span class="text-danger" asp-validation-for="Weight"></span>
+                                <input class="form-control" placeholder="Weight" asp-for="Weight" type="number" />
+                                <span class="text-danger" asp-validation-for="Weight"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">PickUpdate</div>
                             <div class="col-lg-8 ">
-                                <input class="form-control" placeholder="PickUpdate" asp-for="PickUpDate" type="datetime-local" /><br />
-                                <span class="text-danger" asp-validation-for="PickUpDate"></span>
+                                <input class="form-control" placeholder="PickUpdate" asp-for="PickUpDate" type="datetime-local" />
+                                <span class="text-danger" asp-validation-for="PickUpDate"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Dropdate</div>
                             <div class="col-lg-8">
                                 <input class="form-control" asp-for="DropDate" type="datetime-local" />
-                                <span class="text-danger" asp-validation-for="DropDate"></span>
+                                <span class="text-danger" asp-validation-for="DropDate"></span><br/>
                             </div>
                         </div>
                          <div class="row">
                             <div class="col-lg-4 pt-2">FromAddress</div>
                             <div class="col-lg-8">
-                                <input class="form-control" placeholder="FromAddress" asp-for="FromAddress" type="tel" /><br />
-                                <span class="text-danger" asp-validation-for="FromAddress"></span>
+                                <input class="form-control" placeholder="FromAddress" asp-for="FromAddress" type="tel" />
+                                <span class="text-danger" asp-validation-for="FromAddress"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">ToAddress</div>
                             <div class="col-lg-8">
-                                <input class="form-control" placeholder="ToAddress" asp-for="ToAddress" type="tel" /><br />
-                                <span class="text-danger" asp-validation-for="ToAddress"></span>
+                                <input class="form-control" placeholder="ToAddress" asp-for="ToAddress" type="tel" />
+                                <span class="text-danger" asp-validation-for="ToAddress"></span><br />
                             </div>
                         </div>
 
