--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Driver/DriverAddEdit.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Driver/DriverAddEdit.cshtml
@@ -39,27 +39,27 @@
                         <div class="row">
                             <div class="col-lg-4 pt-2">Driver Name</div>
                             <div class="col-lg-8 ">
-                                <input class="form-control" asp-for="DriverName" type="text" placeholder="Driver Name" /><br /><span class="text-danger" asp-validation-for="DriverName"></span>
+                                <input class="form-control" asp-for="DriverName" type="text" placeholder="Driver Name" /><span class="text-danger" asp-validation-for="DriverName"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Driver Phone</div>
                             <div class="col-lg-8">
 
-                                <input class="form-control" asp-for="DriverPhone" type="text" placeholder="Driver Phone" /><br /><span class="text-danger" asp-validation-for="DriverPhone"></span>
+                                <input class="form-control" asp-for="DriverPhone" type="text" placeholder="Driver Phone" /><span class="text-danger" asp-validation-for="DriverPhone"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Licence No</div>
                             <div class="col-lg-8">
-                                <input class="form-control" asp-for="LicenceNo" type="text" placeholder="Licence No" /><br /><span class="text-danger" asp-validation-for="LicenceNo"></span>
+                                <input class="form-control" asp-for="LicenceNo" type="text" placeholder="Licence No" /><span class="text-danger" asp-validation-for="LicenceNo"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">Licence ExpiryDate</div>
                             <div class="col-lg-8">
 
-                                <input class="form-control" asp-for="LicenceExpiryDate" type="date" placeholder="Licence Expiry Date" /><br /><span class="text-danger" asp-validation-for="LicenceExpiryDate"></span>
+                                <input class="form-control" asp-for="LicenceExpiryDate" type="date" placeholder="Licence Expiry Date" /><span class="text-danger" asp-validation-for="LicenceExpiryDate"></span><br />
                             </div>
                         </div>
                        
