--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/GoodsType/GoodsTypeAddEdit.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/GoodsType/GoodsTypeAddEdit.cshtml
@@ -39,7 +39,7 @@
                         <div class="row">
                             <div class="col-lg-4 pt-2">Goods Type Name</div>
                             <div class="col-lg-8 ">
-                                <input class="form-control" asp-for="GoodsTypeName" type="text" placeholder="GoodsType Name" /><br /><span class="text-danger" asp-validation-for="GoodsTypeName"></span>
+                                <input class="form-control" asp-for="GoodsTypeName" type="text" placeholder="GoodsType Name" /><span class="text-danger" asp-validation-for="GoodsTypeName"></span><br />
                             </div>
                         </div>
                        
