--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/City/CityAddEdit.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/City/CityAddEdit.cshtml
@@ -39,14 +39,14 @@
                         <div class="row">
                             <div class="col-lg-4 pt-2">City Name</div>
                             <div class="col-lg-8 ">
-                                <input class="form-control" asp-for="CityName" type="text" placeholder="City Name" /><br /><span class="text-danger" asp-validation-for="CityName"></span>
+                                <input class="form-control" asp-for="CityName" type="text" placeholder="City Name" /><span class="text-danger" asp-validation-for="CityName"></span><br />
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 pt-2">City Code</div>
                             <div class="col-lg-8">
 
-                                <input class="form-control" asp-for="CityCode" type="text" placeholder="City Code" /><br /><span class="text-danger" asp-validation-for="CityCode"></span>
+                                <input class="form-control" asp-for="CityCode" type="text" placeholder="City Code" /><span class="text-danger" asp-validation-for="CityCode"></span><br />
                             </div>
                         </div>
                       
